// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SemanticSearchResults should only display items that match filters 1`] = `
<div
  className="row panels-layout"
>
  <React.Fragment>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="query - Semantic search results"
    />
    <main
      className="semantic-search-results-viewer document-viewer with-panel"
    >
      <div>
        query
      </div>
      <RowList
        zoomLevel={0}
      >
        <Connect(Doc)
          additionalText={
            <div
              className="item-metadata"
            >
              <dl
                className="metadata-type-text"
              >
                <dt>
                  Sentences above threshold
                </dt>
                <dd>
                  2
                </dd>
              </dl>
              <dl
                className="metadata-type-text"
              >
                <dt>
                  Average sentence threshold
                </dt>
                <dd>
                  0.43333333333333335
                </dd>
              </dl>
            </div>
          }
          doc={
            Immutable.Map {
              "semanticSearch": Immutable.Map {
                "averageScore": 0.4,
                "results": Immutable.List [
                  Immutable.Map {
                    "score": 0.6,
                  },
                  Immutable.Map {
                    "score": 0.5,
                  },
                  Immutable.Map {
                    "score": 0.2,
                  },
                ],
              },
            }
          }
          key="0"
          onClick={[Function]}
        />
      </RowList>
    </main>
    <Connect(ResultsSidePanel) />
  </React.Fragment>
</div>
`;

exports[`SemanticSearchResults should render results in ItemList 1`] = `
<div
  className="row panels-layout"
>
  <React.Fragment>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="query - Semantic search results"
    />
    <main
      className="semantic-search-results-viewer document-viewer with-panel"
    >
      <div>
        query
      </div>
      <RowList
        zoomLevel={0}
      >
        <Connect(Doc)
          additionalText={
            <div
              className="item-metadata"
            >
              <dl
                className="metadata-type-text"
              >
                <dt>
                  Sentences above threshold
                </dt>
                <dd>
                  2
                </dd>
              </dl>
              <dl
                className="metadata-type-text"
              >
                <dt>
                  Average sentence threshold
                </dt>
                <dd>
                  0.43333333333333335
                </dd>
              </dl>
            </div>
          }
          doc={
            Immutable.Map {
              "semanticSearch": Immutable.Map {
                "averageScore": 0.4,
                "results": Immutable.List [
                  Immutable.Map {
                    "score": 0.6,
                  },
                  Immutable.Map {
                    "score": 0.5,
                  },
                  Immutable.Map {
                    "score": 0.2,
                  },
                ],
              },
            }
          }
          key="0"
          onClick={[Function]}
        />
        <Connect(Doc)
          additionalText={
            <div
              className="item-metadata"
            >
              <dl
                className="metadata-type-text"
              >
                <dt>
                  Sentences above threshold
                </dt>
                <dd>
                  1
                </dd>
              </dl>
              <dl
                className="metadata-type-text"
              >
                <dt>
                  Average sentence threshold
                </dt>
                <dd>
                  0.3333333333333333
                </dd>
              </dl>
            </div>
          }
          doc={
            Immutable.Map {
              "semanticSearch": Immutable.Map {
                "averageScore": 0.6,
                "results": Immutable.List [
                  Immutable.Map {
                    "score": 0.7,
                  },
                  Immutable.Map {
                    "score": 0.2,
                  },
                  Immutable.Map {
                    "score": 0.1,
                  },
                ],
              },
            }
          }
          key="1"
          onClick={[Function]}
        />
      </RowList>
    </main>
    <Connect(ResultsSidePanel) />
  </React.Fragment>
</div>
`;

exports[`SemanticSearchResults when the search is empty should render not found page 1`] = `
<div
  className="row panels-layout"
>
  <React.Fragment>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title=" - Semantic search results"
    />
    <main
      className="semantic-search-results-viewer document-viewer with-panel"
    >
      <div />
      <RowList
        zoomLevel={0}
      />
    </main>
    <Connect(ResultsSidePanel) />
  </React.Fragment>
</div>
`;
